--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
             
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://liveeditor-v1.netlify.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
