--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
               <h4 class="h4 timeline-item-title">Sri Vidhya College of Arts and Science - Virudhunagar</h4>
 
-              <span>2019 — 2022</span>
+              <span> Bachelor of Computer Applications | 2019 — 2022</span>
 
               <p class="timeline-text">
                 Secretary | Department of Computer Science and Applications
