Update Ref Link

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/project-1.jpg" alt="Resume/CV Page" loading="lazy">
+                  <img src="./assets/images/100/Day3.png" alt="Resume/CV Page" loading="lazy">
                 </figure>
                 <h3 class="project-title">Day 3 - Resume/CV Page</h3>
                 <p class="project-category">Challenge</p>
