Updated Portfolio Section

--- a/index.html
+++ b/index.html
@@ -1493,25 +1493,25 @@
 
               </a>
             </li>
-<!-- 
-            <li class="project-item  active" data-filter-item data-category="challenge">
-              <a href="#">
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="https://www.figma.com/design/RNhZ0AzGjWxMbR6UA14Bxn/Portfolio?node-id=0-1&t=ki9Z8aDGiRnN65Dv-1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Design/Personal_portfolio.png" alt="Personal Portfolio" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Day 42 - Reveal Menu Animation</h3>
+                <h3 class="project-title">Personal Portfolio</h3>
 
-                <p class="project-category">Challenge</p>
+                <p class="project-category">Design</p>
 
               </a>
             </li>
-
+<!-- 
             <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
